--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 			Home
 		</a>
 	</li>
-    <li><a class="MenuBarItemSubmenu" href="#" >Interests</a>
+    <li><a class="MenuBarItemSubmenu" href="#Interest" >Interests</a>
 		<ul>
 			<li><a href="#">
 				Origami
@@ -53,7 +53,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 			</a></li>
 			</ul>
 	</li>
-    <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
+    <li><a class="MenuBarItemSubmenu" href="#Project">Projects</a>
       <ul>
 		<li><a href="Projects/EcoCAR/index.html">
 			McMaster EcoCar3
@@ -96,14 +96,14 @@ Do the following if you're using your customized build of modernizr (http://www.
     <li><a href="#">Contact</a></li>
   </ul>
 </div>
-<div class="Block" id="AboutMe">
+<div name="AboutMe" class="Block" id="AboutMe">
 <div id="AboutMeText">
   <h1> About Me </h1>
 <p>I am a mechatronics engineerig student at McMaster University  who has a passion for  technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my accomplishments and expand my knowledge on web development.</p></div>
 <div id="AboutMePhoto" Class="Title"><p><img src="11062379_10200468276227128_3031736896492371818_o.jpg" width=100%></p>
 </div>
 </div>
-<div class="Block" id="Interest">
+<div name="Interest" class="Block" id="Interest">
   <div class="Title"><h1>Interests</h1></div>
   <div class="Attribute">
     <h2>
@@ -130,9 +130,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     </h2>
   </div>
 </div>
-
-
-<div class="Block" id="Project">
+<div name="Project" class="Block" id="Project">
   <div class="Title"><h1>Projects</h1></div>
   <a href="Projects/EcoCAR/index.html">
   	<div class="Attribute">
@@ -215,7 +213,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     </div>
   </a>
 </div>
-<div class="Block" id="Community">
+<div name="Community" class="Block" id="Community">
   <div class="Title"><h1>Community Involvement</h1></div>
   <div class="Attribute"><h2>Mentorship</h2></div>
   <div class="Attribute"><h2>Volunteering</h2></div>
