--- a/Projects/QuadSim/index.html
+++ b/Projects/QuadSim/index.html
@@ -9,6 +9,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>QuadSim</title>
+<link href="index.css" rel="stylesheet" type="text/css">
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
 <link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
@@ -86,7 +87,8 @@ Do the following if you're using your customized build of modernizr (http://www.
   <h1>Quad Sim </h1>
 
     <div id="LayoutDiv1">
-		<div class="Image"><p><img src="Project QuadSIM.JPG" width="100%"></p></div>
+		<div class="Image" ><p><img src="Project QuadSIM.JPG" width="100%"></p>
+		</div>
         <div class="Paragraph">
 			<P>QuadSim was the first project I worked on in a hackathon. The aim of the project was to get familiar with Microsoft's Kinnect developer kit and use it to create an intuitive game. My group and I decided to create a quadcopter simulator where the hand movements would determine the yaw, pitch, and roll as well as the throttle speed. We used the Unitiy game engine to interface with the sensor and to control all aspects of the simulator. The sensor viewed the angles of both the player's hand and provided an experience similar to using the wheel on an airplane.</P>
 		</div>
@@ -95,13 +97,16 @@ Do the following if you're using your customized build of modernizr (http://www.
 
     
   <div id="LayoutDiv2">
-    <div class="Image"><p><img src="Project QuadSIM.JPG" width="100%"></p></div>
+    <div id="NudgeMe" class="Image">
+      <iframe margine-top="5%" width="95%" height="400px" src="https://www.youtube.com/embed/QvIKqO3_fws" frameborder="0" allowfullscreen></iframe>
+    </div>
     <div class="Paragraph">
-      <P> What I found exciting about this project was that i could apply my knowledge in mechanical design and simulation to create a basic simulator. The models in this project were designed on Autodesk Inventor and the textures were applied on Blender. This project was the first time I worked in a team for a pure software based application. Through this experience I learned how essential it is to create modular code. Furthermore my tem an I got a chance to be mentored by software developers from Microsoft and learned a lot about the Kinect sensor</P></div>
+      <P> What I found exciting about this project was that I could apply my knowledge in mechanical design and simulation to create a basic simulator. The models in this project were designed on Autodesk Inventor and the textures were applied on Blender. This project was the first time I worked in a team for a pure software based application. Through this experience I learned how essential it is to create modular code. Furthermore my tem an I got a chance to be mentored by software developers from Microsoft and learned a lot about the Kinect sensor</P></div>
   </div>
   
   <div id="LayoutDiv2">
-    <div class="Image"><p><img src="Project QuadSIM.JPG" width="100%"></p></div>
+    <div class="Image"><p><img src="20141011-DSC04503.jpg"></p>
+    </div>
     <div class="Paragraph">
       <P> The project proceeded to win the Company API prize from Microsoft at a hackathon in Rutgers university(HACK RU). As a result my team and I got to meet a lot of representatives from different companies and get their opinion and feedback on our project. The source code to our project is publically available on the team <a href="https://github.com/SNavleen/QuadSim">GIT</a></P></div>
   </div>
