--- a/Projects/SumoBot/index.html
+++ b/Projects/SumoBot/index.html
@@ -96,16 +96,11 @@ Do the following if you're using your customized build of modernizr (http://www.
 
     
   <div id="LayoutDiv2">
-    <div id="NudgeMe" class="Image"><p><img src="Screen 2.png" width="100%"></p></div>
+    <div id="NudgeMe" class="Image"><p><img src="20141107_064416.jpg"></p>
+    </div>
     <div class="Paragraph">
       <P>I was the Vice Presidents of Parts in the club. I was responsible for creating an economic kit of parts for each team that competed. I had to stay in regular communication with the Vice President of Finance and the President of the club to ensure that the parts being ordered were within the clubs budget. While performing my duties I learned about the many hardware and electronics distributors in the Greater Toronto and Hamilton Area. My primary focus at the club was to ensure that all the teams received quality parts sufficient to build an average robot.
 	  </p></div>
-  </div>
-  
-  <div id="LayoutDiv2">
-    <div class="Image"><p><img src="Project Strangers.jpg" width="100%"></p></div>
-    <div class="Paragraph">
-      <P> </P></div>
   </div>
 </div>
 <script type="text/javascript">
