--- a/Projects/SumoBot/index.html
+++ b/Projects/SumoBot/index.html
@@ -87,7 +87,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <h1>McMaster SumoBot </h1>
 
     <div id="LayoutDiv1">
-		<div class="Image"><p><img src="Project Sumobot.jpg" width="100%"></p></div>
+		<div class="Image"><p><img src="Project SumoBot.jpg" width="100%"></p></div>
         <div class="Paragraph">
 			<P>The <a href="https://www.facebook.com/McMasterSumoBot?fref=ts"> McMaster SumoBot </a> group was founded by Vinay Yuvashankar as an effort to help the Mechatronics Engineering students at McMaster to gain more practical experience in the field. Over the past two years I have competed in and  helped organise the event. The event helped me learn a lot about how a club at McMaster operates. I got first had experience in filing out the necessary paperwork and creating proper documentation to ensure that others can perform my duties once I have graduated.</P>
 		</div>
