small fix class in rojects

--- a/Projects/Class/index.html
+++ b/Projects/Class/index.html
@@ -86,8 +86,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <h1>In Class Porjects</h1>
 
     <div id="LayoutDiv1">
-		<div class="Image"><p><img src="pen paper.jpg"></p>
-		</div>
+		<div class="Image"><p><img src="pen paper.jpg"></p></div>
         <div class="Paragraph">
 			<P>Studying in Woburn CI and McMaster University has given me mny opporunities to work on projects relevent to Engineering.	THrough	these i have learned about the proper process required to build a system according to the specification. SOme relavent projects I have worked on are Building an Analog to Digital Converter, and building the internal gearing to a CD Drive. </P>
         </div>
@@ -101,6 +100,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     </div>
     <div class="Paragraph">
       <P>The most recent class project I worked on was to design and construct an analog to digital converter with electrical components. The board was designed and simulated on National Instruments Multisim. once the simulations were sucessful, the circuit was constructed on a breadboard using a myDAQ to provide the signal and read the feedback by the computer. </p></div>
+      <div>
      <object data="prakhar report.pdf" type="application/pdf" width="100%" height="400px">
  
   <p>It appears you don't have a PDF plugin for this browser.
@@ -108,19 +108,22 @@ Do the following if you're using your customized build of modernizr (http://www.
   download the PDF file.</a></p>
   
 </object>
+</div>
   </div>
   
   <div id="LayoutDiv2">
     <div class="Image"><p><img src="render.jpg" width="100%"></p></div>
     <div class="Paragraph">
       <P>Similarly I have worked on projects related to designing and manufacturing mechanical parts for a CD Drive. The simulation and design of this particular project was done on Autodesk Inventor and Maple Sim. Once the design was validated, a protoype was manufactured on a RepRap 3D printer <a href="https://github.com/SNavleen/Stranger"></a>and tested. The project helpd me learn a lot about the modeling and simulatin capabilities of Maple Sim</P></div>
-<object data="Design.pdf" type="application/pdf" width="100%" height="100%">
+      <div>
+<object data="Design.pdf" type="application/pdf" width="100%" height="400px">
  
   <p>It appears you don't have a PDF plugin for this browser.
   No biggie... you can <a href="myfile.pdf">click here to
   download the PDF file.</a></p>
   
 </object>
+</div>
   </div>
 </div>
 <script type="text/javascript">
