small fix class in rojects

--- a/Projects/Class/index.html
+++ b/Projects/Class/index.html
@@ -100,7 +100,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     </div>
     <div class="Paragraph">
       <P>The most recent class project I worked on was to design and construct an analog to digital converter with electrical components. The board was designed and simulated on National Instruments Multisim. once the simulations were sucessful, the circuit was constructed on a breadboard using a myDAQ to provide the signal and read the feedback by the computer. </p></div>
-      <div>
+      <div class="Document">
      <object data="prakhar report.pdf" type="application/pdf" width="100%" height="400px">
  
   <p>It appears you don't have a PDF plugin for this browser.
@@ -115,7 +115,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div class="Image"><p><img src="render.jpg" width="100%"></p></div>
     <div class="Paragraph">
       <P>Similarly I have worked on projects related to designing and manufacturing mechanical parts for a CD Drive. The simulation and design of this particular project was done on Autodesk Inventor and Maple Sim. Once the design was validated, a protoype was manufactured on a RepRap 3D printer <a href="https://github.com/SNavleen/Stranger"></a>and tested. The project helpd me learn a lot about the modeling and simulatin capabilities of Maple Sim</P></div>
-      <div>
+      <div class="Document">
 <object data="Design.pdf" type="application/pdf" width="100%" height="400px">
  
   <p>It appears you don't have a PDF plugin for this browser.
