small spelling fixes

--- a/Projects/Class/index.html
+++ b/Projects/Class/index.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Prakhar Garg</title>
+<title>In Class Projects</title>
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
 <link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
@@ -83,12 +83,12 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 
 <div class="Block" id="Strangers">
-  <h1>In Class Porjects</h1>
+  <h1>In Class Projects</h1>
 
     <div id="LayoutDiv1">
 		<div class="Image"><p><img src="pen paper.jpg"></p></div>
         <div class="Paragraph">
-			<P>Studying in Woburn CI and McMaster University has given me mny opporunities to work on projects relevent to Engineering.	THrough	these i have learned about the proper process required to build a system according to the specification. SOme relavent projects I have worked on are Building an Analog to Digital Converter, and building the internal gearing to a CD Drive. </P>
+			<P>Studying in Woburn C.I. and McMaster University has given me mny opporunities to work on projects relevent to Engineering.	Through	these I have learned about the proper process required to build a system according to the specification. Some relavent projects I have worked on are Building an Analog to Digital Converter, and building the internal gearing to a CD Drive. </P>
         </div>
 	</div>
 
