--- a/Projects/FIRST/index.html
+++ b/Projects/FIRST/index.html
@@ -83,12 +83,12 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 
 <div class="Block" id="Strangers">
-  <h1>In Class Projects</h1>
+  <h1>FIRST Robotics Competition</h1>
 
     <div id="LayoutDiv1">
-		<div class="Image"><p><img src="pen paper.jpg"></p></div>
+		<div class="Image"><p><img src="Project FIRST.jpg"></p></div>
         <div class="Paragraph">
-			<P>Studying in Woburn C.I. and McMaster University has given me mny opporunities to work on projects relevent to Engineering.	Through	these I have learned about the proper process required to build a system according to the specification. Some relavent projects I have worked on are Building an Analog to Digital Converter, and building the internal gearing to a CD Drive. </P>
+			<P>Founded by Dean Kamen, FIRST stands for For Inspiration and Recognition of Science and Technology. The aim of the organisation is to increase interest in Science Technology Engineering and Mathamatic (STEM) education. FIRST achieves its goals by hosting several international competitions for students of different age groups.</P>
         </div>
 	</div>
 
@@ -101,7 +101,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div class="Paragraph">
       <P>The most recent class project I worked on was to design and construct an analog to digital converter with electrical components. The board was designed and simulated on National Instruments Multisim. once the simulations were sucessful, the circuit was constructed on a breadboard using a myDAQ to provide the signal and read the feedback by the computer. </p></div>
       <div class="Document">
-      <object data="prakhar report.pdf" type="application/pdf" width="100%" height="400px">
+     <object data="prakhar report.pdf" type="application/pdf" width="100%" height="400px">
  
   <p>It appears you don't have a PDF plugin for this browser.
   No biggie... you can <a href="myfile.pdf">click here to
