--- a/Projects/Class/index.html
+++ b/Projects/Class/index.html
@@ -105,7 +105,7 @@ Do the following if you're using your customized build of modernizr (http://www.
  
   <p>It appears you don't have a PDF plugin for this browser.
   No biggie... you can <a href="myfile.pdf">click here to
-  download the PDF file.</a></p>
+  download the fullPDF of the report on the Analog to Digital Converter.</a></p>
   
 </object>
 </div>
@@ -120,7 +120,7 @@ Do the following if you're using your customized build of modernizr (http://www.
  
   <p>It appears you don't have a PDF plugin for this browser.
   No biggie... you can <a href="myfile.pdf">click here to
-  download the PDF file.</a></p>
+  download the fullPDF of the report on the CD drive.</a></p>
   
 </object>
 </div>
