starting working on FIRST

--- a/Projects/FIRST/index.html
+++ b/Projects/FIRST/index.html
@@ -88,7 +88,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div id="LayoutDiv1">
 		<div class="Image"><p><img src="Project FIRST.jpg"></p></div>
         <div class="Paragraph">
-			<P>Founded by Dean Kamen, FIRST stands for For Inspiration and Recognition of Science and Technology. The aim of the organisation is to increase interest in Science Technology Engineering and Mathamatic (STEM) education. FIRST achieves its goals by hosting several international competitions for students of different age groups.</P>
+			<P>Founded by Dean Kamen, FIRST stands for For Inspiration and Recognition of Science and Technology. The aim of the organisation is to increase interest in Science Technology Engineering and Mathamatic (STEM) education. FIRST achieves its goals by hosting several international competitions for students of different age groups. I have compeeted in two of the 4 levels of competition, THe FIrst Tech CHallenge (FTC) and the First Robotics Competition (FRC).</P>
         </div>
 	</div>
 
