--- a/Projects/FIRST/index.html
+++ b/Projects/FIRST/index.html
@@ -88,43 +88,31 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div id="LayoutDiv1">
 		<div class="Image"><p><img src="Project FIRST.jpg"></p></div>
         <div class="Paragraph">
-			<P>Founded by Dean Kamen, FIRST stands for For Inspiration and Recognition of Science and Technology. The aim of the organisation is to increase interest in Science Technology Engineering and Mathamatic (STEM) education. FIRST achieves its goals by hosting several international competitions for students of different age groups. I have compeeted in two of the 4 levels of competition, THe FIrst Tech CHallenge (FTC) and the First Robotics Competition (FRC).</P>
+			<P>Founded by Dean Kamen, FIRST stands for For Inspiration and Recognition of Science and Technology. The aim of the organisation is to increase interest in Science Technology Engineering and Mathematics (STEM) education. FIRST achieves its goals by hosting several international competitions for students of different age groups. I have competed in two of the 4 levels of competition, The First Tech Challenge (FTC) and the First Robotics Competition (FRC).</P>
         </div>
 	</div>
 
 
     
-  <div id="LayoutDiv2">
+  <div id="2012">
     <div id="NudgeMe" class="Image">
-      <p><img src="Project Class.jpg"></p>
+      <p><img src="2012robot.jpg"></p>
     </div>
     <div class="Paragraph">
-      <P>The most recent class project I worked on was to design and construct an analog to digital converter with electrical components. The board was designed and simulated on National Instruments Multisim. once the simulations were sucessful, the circuit was constructed on a breadboard using a myDAQ to provide the signal and read the feedback by the computer. </p></div>
-      <div class="Document">
-     <object data="prakhar report.pdf" type="application/pdf" width="100%" height="400px">
- 
-  <p>It appears you don't have a PDF plugin for this browser.
-  No biggie... you can <a href="myfile.pdf">click here to
-  download the PDF file.</a></p>
-  
-</object>
-</div>
+	  <h2>2012</h2>
+      <P>This was my senior year of competing. I was the president of the of the team. My primary responsibility was to manage the project and ensure that all deadlines were met. I was responsible for maintaining communication between the sub teams and the mentors to ensure that the team built a quality robot. This was a great way for me to diversify my knowledge on the different aspects of robotic design. </p>
+	</div>
   </div>
-  
-  <div id="LayoutDiv2">
-    <div class="Image"><p><img src="render.jpg" width="100%"></p></div>
+    <div id="2011">
+    <div id="NudgeMe" class="Image">
+      <p><img src="2011robot.jpg"></p>
+    </div>
     <div class="Paragraph">
-      <P>Similarly I have worked on projects related to designing and manufacturing mechanical parts for a CD Drive. The simulation and design of this particular project was done on Autodesk Inventor and Maple Sim. Once the design was validated, a protoype was manufactured on a RepRap 3D printer <a href="https://github.com/SNavleen/Stranger"></a>and tested. The project helpd me learn a lot about the modeling and simulatin capabilities of Maple Sim</P></div>
-      <div class="Document">
-<object data="Design.pdf" type="application/pdf" width="100%" height="400px">
- 
-  <p>It appears you don't have a PDF plugin for this browser.
-  No biggie... you can <a href="myfile.pdf">click here to
-  download the PDF file.</a></p>
-  
-</object>
-</div>
+	  <h2>2011</h2>
+      <P></p>
+	</div>
   </div>
+  
 </div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
