--- a/Projects/FIRST/index.html
+++ b/Projects/FIRST/index.html
@@ -96,7 +96,18 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div class="Image"><img src="2012robot.jpg"></div>
     <div class="Paragraph">
         <p>
-        	This was my senior year in robotics and I was appointed the role of president of the team by my fellow team mates and mentors. This meant that I had the responsibility to manage the progress of all the sub-teams and their side projects. I also had to ensure that all of the team’s progress was being conveyed to the rest of the team as well as the mentors. Furthermore I had a major role in the designing and manufacturing process of the robot. <br>
+        	This was my senior year in robotics and I was appointed the role of president of the team by my fellow team mates and mentors. This meant that I had the responsibility to manage the progress of all the sub-teams and their side projects. I also had to ensure that all of the team’s progress was being conveyed to the rest of the team as well as the mentors. Furthermore I had a major role in the designing and manufacturing process of the robot.
+        </p>
+    </div>
+    <div class="Image">
+    	<iframe src="https://www.youtube.com/embed/13HpbFjZWto" frameborder="0" allowfullscreen>
+    		<p>
+            	Looks like the video is broken. <a href="https://www.youtube.com/embed/13HpbFjZWto"> Click here to see the 2009 game animation on YouTube</a>
+            </p>
+        </iframe>
+    </div>
+    <div class="Paragraph">
+        <p>
 			The primary frame this year was built entirely out of sheet metal. This allowed the team to outsource a lot of the manufacturing. Our Laser cutter sponsor sable metals was able to deliver the parts in a fraction of the time it would normally take us to produce it. We saved further weight in the assembly by using rivets instead of bolts. This also prevented failure due to the bolts in the frame coming loose. <br>
 			For the shooter I decided to use a wooden fixed hood turret. The fixed hoot allowed there to be less moving parts and reducing the complexity of the turret. To vary the distance of the shot, the velocity of the ball was varied by controlling the speed of the motors. They were controlled through a PID feedback loop that allowed the flywheel to quickly get to speed.
         </p>
@@ -107,7 +118,18 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div class="Image"><img src="2011robot.jpg"></div>
     <div class="Paragraph">
         <p>
-        	The challenge this year was to pick up and raise inflatable tubes about 6 feet above the ground. For bonus points the robot had to deploy a mini robot that raced against other mini robots. The most challenging part of the competition was accurately the deployment of the mini-bot. To do this the robot used an additional control system, pneumatics. I was responsible for making and maintaining the pneumatic systems on the robot. <br>
+        	The challenge this year was to pick up and raise inflatable tubes about 6 feet above the ground. For bonus points the robot had to deploy a mini robot that raced against other mini robots. The most challenging part of the competition was accurately the deployment of the mini-bot. To do this the robot used an additional control system, pneumatics. I was responsible for making and maintaining the pneumatic systems on the robot.
+        </p>
+    </div>
+    <div class="Image">
+    	<iframe src="https://www.youtube.com/embed/93Tygo0_O5c" frameborder="0" allowfullscreen>
+    		<p>
+            	Looks like the video is broken. <a href="https://www.youtube.com/embed/93Tygo0_O5c"> Click here to see the 2010 game animation on YouTube</a>
+            </p>
+        </iframe>
+    </div>
+    <div class="Paragraph">
+        <p>
 			The onboard pneumatics allowed us to use a pneumatically actuated shifting gearbox. This allowed the robot to shift from 7 Ft/s to 14 Ft/s. This allows the robot to push others around in low gear as well as race past others in high gear. The shifting gearbox gave us a competitive advantage especially when it was time to deploy the mini-bot.<br>
 			The overall design was based on the basic design of some of the robots that I had built in VEX. The robot had an A-frame with a claw. The claw was designed to instantly hold any tube on contact. This was done by using touch sensors to trigger and stop the intake action of the robot. The Rollers on the claw had a surface speed of 20 Ft/s which is much faster than the speed the robot drives at. This allows the pickup to still work when the robot drives at full speed. <br> 
 			During the design process we make 2 robots. The first is a prototype and is used to practice when the final robot is being shipped to the competition. The second robot is the final robot that gets built for competition. This robot incorporates all of the changes that we found necessary from the first robot.
@@ -120,7 +142,20 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div class="Paragraph">
         <p>
         	The aim for this year’s competition was to make robots play soccer. At a high school level it would be extremely difficult to make robots that run and kick a soccer ball so the rules were modified a little. <br>
-			This particular robot used mecum wheels to give the robot added manoeuvrability. The additional axis of freedom helped justify the significantly lower grip as well as the cost of replacing these fragile wheels more often than a standard rough top rubber treed. <br>
+        	This particular robot used mecanum wheels to give the robot added manoeuvrability. The additional axis of freedom helped justify the significantly lower grip as well as the cost of replacing these fragile wheels more often than a standard rough top rubber tread. <br>
+
+        </p>
+    </div>
+    <div class="Image">
+    	<iframe src="https://www.youtube.com/embed/IEHAj3EmpMw" frameborder="0" allowfullscreen>
+    		<p>
+            	Looks like the video is broken. <a href="https://www.youtube.com/watch?v=Np2deG_RWg0"> Click here to see the 2010 game animation on YouTube</a>
+            </p>
+        </iframe>
+    </div>
+    <div class="Paragraph">
+        <p>
+			This particular robot used mecanum wheels to give the robot added manoeuvrability. The additional axis of freedom helped justify the significantly lower grip as well as the cost of replacing these fragile wheels more often than a standard rough top rubber treed. <br>
 			The green and red rollers were a part of the ball control mechanism that gripped onto a small section of the ball to prevent it from rolling away. Behind the Bosch we used a spring loaded Bosch kicker that is subject to 200lbs of force. This kicker is manipulated though a dog gearbox that takes advantage of the anti-drive back technology in DeWalt drills. <br>
 			During this particular year I learned a lot about how essential it is to pick the right material to build certain parts of the robot. Due to a lack of understand of stress, we used unnecessary amounts of box tubing to make the frame of the robot. This resulted in added weight that pushed the robot over the 120lb weight limit specified by the rules. <br>
 			I also found that it is important to look into the lifetime of every part and what maintenance work will be required. While working in the pits I found that the front rollers often needed to be replaced and cleaned. Furthermore the wheels that we used also needed to be changed every regional. Changing the wheels was extremely expensive and time consuming. <br>
@@ -133,7 +168,18 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div class="Image"><img src="2009robot.jpg"></div>
     <div class="Paragraph">
         <p>
-        	This was my first year in FIRST robotics. Competition. This particular competition truly captured by attention because of the size of the robots and the scale of the competition. At this point I could visualise robots performing real life tasks and assisting humans as opposed to being small toys designed to fight each other. As a rookie I quickly learned how to manufacture raw materials to specifications and learned the basics of robotic design. The seniors on my team became my mentors and I was able to quickly learn as well as contribute to the design of the robot. That year I was responsible for overseeing the manufacturing and maintenance of the drivetrain of the robot. <br>
+        	This was my first year in FIRST robotics. Competition. This particular competition truly captured by attention because of the size of the robots and the scale of the competition. At this point I could visualise robots performing real life tasks and assisting humans as opposed to being small toys designed to fight each other. As a rookie I quickly learned how to manufacture raw materials to specifications and learned the basics of robotic design. The seniors on my team became my mentors and I was able to quickly learn as well as contribute to the design of the robot. That year I was responsible for overseeing the manufacturing and maintenance of the drivetrain of the robot.
+        </p>
+    </div>
+    <div class="Image">
+    	<iframe src="https://www.youtube.com/embed/Np2deG_RWg0" frameborder="0" allowfullscreen>
+    		<p>
+            	Looks like the video is broken. <a href="https://www.youtube.com/watch?v=Np2deG_RWg0"> Click here to see the 2009 game animation on YouTube</a>
+            </p>
+        </iframe>
+    </div>
+    <div class="Paragraph">
+        <p>
 			The aim of the year’s competition was to have your robot score basketball sized balls into goals that were attached to the robots in the opposing team. This proved to be a challenge strategically because playing a purely offensive match made it easier for the opposing team to score. <br>
 			The competition was further made challenging by using a playing field made of lunar regaleph to simulate the low friction effects caused to the low gravity on the moon’s surface. To overcome this many teams attempted to use traction control systems on their robot. My team however found that we could increase traction by switching between static and rolling friction by pulsing the power supplied to the wheels.
         </p>
