fixed the missing photo in strangers

--- a/Projects/Strangers/index.html
+++ b/Projects/Strangers/index.html
@@ -96,7 +96,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 
     
   <div id="LayoutDiv2">
-    <div id="NudgeMe" class="Image"><p><img src="Screen 2.png" width="100%"></p></div>
+    <div id="NudgeMe" class="Image"><p><img src="Screen 2.jpg" width="100%"></p></div>
     <div class="Paragraph">
       <P> While developing Strangers with my team I gained a lot of first hand experience and mentorship working with the Google android SDK and learning the basics of how to develop the front end of the application. The data we received from Facebook was packaged as a JSON file. Our app repackaged the file to better work with IBM's Bluemix servers. In Bluemix I learned how to code in node.js and interface with Watson. Watson was the computation engine responsible for analusing the data packets sent to bluemix and respond with a personality profile. The data was used to pair users who ere directed to a firebase script that allowed us to quickly set up a messenger feed between two users.</p></div>
   </div>
