added photos to VEX

--- a/Projects/VEX/index.html
+++ b/Projects/VEX/index.html
@@ -86,9 +86,29 @@ Do the following if you're using your customized build of modernizr (http://www.
 	<h1>VEX Robotics Competition</h1>
    	<div class="Image"><img src="Project VEX.jpg"></div>
     <div class="Paragraph">
-      	<p>The Vex Robotics competition has always played an essential role in  developing my knowledge of mechanical systems. The Kit has different structural  components and parts that are easy to manufacture and manipulate. This makes  them a great tool for making proof of concept models. Participating in VEX  competitions also taught me a lot about structural support and eliminating  inefficiencies in the robot. <br>
-   	    I have competed in the VEX robotics competition from 2008 to 2012. Furthermore  I have mentored younger students and taught them how to build more robust  machines. This was primarily done While I was a teaching assistant in the 11th  grade.</p>
-</div>
+      	<p>
+        	The Vex Robotics competition has always played an essential role in  developing my knowledge of mechanical systems. The Kit has different structural  components and parts that are easy to manufacture and manipulate. This makes  them a great tool for making proof of concept models. Participating in VEX  competitions also taught me a lot about structural support and eliminating  inefficiencies in the robot. <br>
+   	    	I have competed in the VEX robotics competition from 2008 to 2012. Furthermore  I have mentored younger students and taught them how to build more robust  machines. This was primarily done While I was a teaching assistant in the 11th  grade.
+        </p>
+	</div>
+    <ul class="Attribute">
+    	<li>
+			<h2><img src="image046.jpg">            	
+            Triangle  bracing was added to the primary bean to ensure the frame would not flex while  the robot lifted heavy loads.</h2>
+        </li>
+        <li>
+        	<ul>
+            	<li><img src="image048.jpg">
+            	  <p>Unsupported drive shafts often got bent under heavy loads. </p>
+            	</li>
+                <li><img src="image047.jpg">A  second beam and aditional gearing were added to reduce shear stress and torsion</li>
+            </ul>
+        </li>
+        <li><img src="image050.jpg">
+        Energy  loss through friction is eliminated by using grease and building well aligned  gearboxes to prevent unnecessary resistance</li>
+        <li><img src="image049.jpg">
+        A  final product where the number of gears is reduced to eliminate losses through  friction. A central conical frame was used to reduce unnecessary strain due to  the weight of the pickup assembly.</li>
+    </ul>
 </div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
