tyring to style the images in VEX

--- a/Projects/VEX/index.html
+++ b/Projects/VEX/index.html
@@ -13,6 +13,7 @@
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
 <link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
+<link href="index.css" rel="stylesheet" type="text/css">
 <!-- 
 To learn more about the conditional comments around the html tags at the top of the file:
 paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/
@@ -91,7 +92,7 @@ Do the following if you're using your customized build of modernizr (http://www.
    	    	I have competed in the VEX robotics competition from 2008 to 2012. Furthermore  I have mentored younger students and taught them how to build more robust  machines. This was primarily done While I was a teaching assistant in the 11th  grade.
         </p>
 	</div>
-    <ul class="Attribute">
+    <ul>
     	<li>
 			<h2><img src="image046.jpg">            	
             Triangle  bracing was added to the primary bean to ensure the frame would not flex while  the robot lifted heavy loads.</h2>
