--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 			<li><a href="#">
 				Origami
 			</a></li>
-			<li><a href="#">
+			<li><a href="Interests/Travelling/index.html">
 				Travelling
 			</a></li>
 			<li><a href="#">
@@ -70,23 +70,18 @@ Do the following if you're using your customized build of modernizr (http://www.
 		<li><a href="Projects/SumoBot/index.html">
 			SumoBot
 		</a></li>		
-        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
+        <li><a class="MenuBarItemSubmenu" href="Projects/FIRST/index.html">FIRST Robotics</a>
           <ul>
-            <li><a href="#">Blizzard X</a></li>
-            <li><a href="#">Blizzard XI</a></li>
-            <li><a href="#">Blizzard XII</a></li>
-            <li><a href="#">Blizzard XIII</a></li>
+            <li><a href="Projects/FIRST/index.html#2009">Blizzard X</a></li>
+            <li><a href="Projects/FIRST/index.html#2010">Blizzard XI</a></li>
+            <li><a href="Projects/FIRST/index.html#2011">Blizzard XII</a></li>
+            <li><a href="Projects/FIRST/index.html#2012">Blizzard XIII</a></li>
           </ul>
         </li>
-        <li><a class="MenuBarItemSubmenu" href="#">VEX Robotics</a>
-          <ul>
-            <li><a href="#">2009</a></li>
-            <li><a href="#">2010</a></li>
-            <li><a href="#">2011</a></li>
-            <li><a href="#">2012</a></li>
-          </ul>
-        </li>
-        <li><a href="http://velocitaracing.weebly.com/">
+        <li><a href="Projects/VEX/index.html">
+			VEX Robotics
+		</a></li>
+        <li><a href="Projects/F1/index.html">
 				F1 in Schools
 		</a></li>
         <li><a href="#">Skills Robotics</a></li>
